# Nasa_Space_Apps_2024

./: README.md
_Backend/AGRUP_NASA-init/: .env.example  .gitignore  README.md  app_run.py
_Backend/AGRUP_NASA-init/R_serwer/: api.R  gleby_dane.Rmd  gleby_dane.html  publikacja_2022_2.xlsx  sensor_data.json  test_api.R
_Backend/AGRUP_NASA-init/R_serwer/Data/: df10.csv  df13.csv  df17.csv  df2.csv  df4.csv  df8.csv
_Backend/AGRUP_NASA-init/api/: pyproject.toml
_Backend/AGRUP_NASA-init/api/api/: api.py  settings.py  urls.py
_Backend/AGRUP_NASA-init/api/documents/: admin.py  apps.py  controllers.py  models.py  schemas.py  views.py
_Backend/AGRUP_NASA-init/app_run_config/: argument_parser_app_run.py  functions_app_run.py
_Embed/nasa-sapce-apps-farming-fusion-transmiter-station/: .cproject  .project  CMakeLists.txt  sdkconfig  sdkconfig.old
_Embed/nasa-sapce-apps-farming-fusion-transmiter-station/main/: CMakeLists.txt  digital.c  digital.h  lora.c  lora.h  main.c  sensors.c  sensors.h  tasks_settings.h
_Embed/nasa-space-apps-challenge-concentraotr/: .cproject  .project  sdkconfig  sdkconfig.old
_Embed/nasa-space-apps-challenge-concentraotr/main/: CMakeLists.txt  gsm.c  gsm.h  http_server.c  http_server.h  lora.c  lora.h  main.c  tasks_settings.h  wifi.c  wifi.h
_Front/: package-lock.json
_Front/AddinationalAssets/: Jak_Odpalić.txt
_Front/main/: index.html  package-lock.json  package.json  vite.config.mjs
_Front/main/src/components/: AppFooter.vue  AppHeader.vue  AppSideBar.vue  HelloWorld.vue
_FrontEmbed/: main.html
(+48 files in other folders)
